--- a/index.html
+++ b/index.html
@@ -2,13 +2,124 @@
 <html lang="pt-br">
 
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>PetLife</title>
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-
+  <header>
+    <div class="container">
+      <a class="logo" href="index.html">
+        <p>PetLife</p>
+      </a>
+      <nav class="menu">
+        <ul>
+          <li>
+            <a href="#inicio">Início</a>
+          </li>
+          <li>
+            <a href="#clinica">Clínica</a>
+          </li>
+          <li>
+            <a href="#farmacia">Farmácia</a>
+          </li>
+          <li>
+            <a href="#duvidas">Dúvidas</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <section class="s-hero" id="inicio">
+    <div class="container">
+      <img src="assets/left-img.svg" alt="">
+      <div class="info">
+        <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
+        <p>A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais dedicados e
+          serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo o bem-estar, a saúde e
+          a felicidade dos seus animais de estimação.</p>
+        <div class="buttons">
+          <button class="btn-primary">
+            Marque uma consulta
+          </button>
+          <a class="link" href="#">Conheça nossa clínica</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="s-clinic" id="clinica">
+    <div class="container">
+      <div class="info">
+        <h1>Cuidado Veterinário de Qualidade</h1>
+        <p>Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários.
+          Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos
+          serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e
+          desfrute da atenção personalizada e do carinho que seu pet merece.</p>
+        <ul>
+          <li>Consultas de rotina e exames de saúde abrangentes</li>
+          <li>Vacinação e imunização</li>
+          <li>Cirurgias e procedimentos veterinários</li>
+          <li>Tratamento e controle de doenças</li>
+          <li>Odontologia veterinária</li>
+          <li>Atendimento de emergência 24 horas</li>
+          <li>Nutrição e aconselhamento alimentar personalizado</li>
+        </ul>
+      </div>
+      <img src="./assets/img-right.svg" alt="" loading="lazy">
+    </div>
+  </section>
+  <section class="s-shop" id="farmacia">
+    <div class="container">
+      <h1>Venha conferir o nosso petshop e farmácia</h1>
+      <img src="./assets/img-pharmacy.svg" alt="" loading="lazy">
+      <p>Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso
+        petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos
+        deliciosos
+        até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará uma
+        variedade
+        de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos veterinários, garantindo que o
+        bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o
+        seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos tornou referência na
+        área veterinária.</p>
+    </div>
+  </section>
+  <section class="s-faq" id="duvidas">
+    <div class="container">
+      <img src="./assets/img-faq.svg" alt="" loading="lazy">
+      <div class="duvidas">
+        <h2>Ficou algum dúvida?</h2>
+        <div>
+          <h3>Quais serviços são oferecidos pela clínica veterinária da PetLife?</h3>
+          <img src="./assets/Vector 2.svg" alt="">
+          <p>A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação,
+            cirurgias, tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de
+            prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e
+            personalizados para garantir a saúde e o bem-estar do seu pet.</p>
+        </div>
+        <div>
+          <h3>Quais espécies de animais a clínica veterinária atende?</h3>
+          <img src="./assets/Vector 2.svg" alt="">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis animi dolore magnam eaque, repudiandae, quisquam illum hic error cumque iste sint, esse voluptates unde? Illum facilis adipisci aliquid eius! Quasi?</p>
+        </div>
+        <div>
+          <h3>A clínica veterinária da PetLife possui serviços de emergência?</h3>
+          <img src="./assets/Vector 2.svg" alt="">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur voluptas, sint deserunt reprehenderit nesciunt voluptatum eum adipisci, tenetur omnis, veniam ab non! Consectetur enim, non consequatur quos autem perferendis mollitia!</p>
+        </div>
+        <div>
+          <h3>A clínica oferece serviços de banho e tosa?</h3>
+          <img src="./assets/Vector 2.svg" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur perferendis quisquam in quo maxime tenetur ipsum cumque consectetur, minus ea alias soluta voluptatum, veniam sapiente perspiciatis, tempore possimus quaerat atque!</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
