--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <img src="./assets/img-faq.svg" alt="" loading="lazy">
       <div class="duvidas">
         <h2>Ficou algum dúvida?</h2>
-        <div>
+        <div class="duvida">
           <h3>Quais serviços são oferecidos pela clínica veterinária da PetLife?</h3>
           <img src="./assets/Vector 2.svg" alt="">
           <p>A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação,
@@ -102,24 +102,76 @@
             prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e
             personalizados para garantir a saúde e o bem-estar do seu pet.</p>
         </div>
-        <div>
+        <div class="duvida">
           <h3>Quais espécies de animais a clínica veterinária atende?</h3>
           <img src="./assets/Vector 2.svg" alt="">
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis animi dolore magnam eaque, repudiandae, quisquam illum hic error cumque iste sint, esse voluptates unde? Illum facilis adipisci aliquid eius! Quasi?</p>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis animi dolore magnam eaque, repudiandae,
+            quisquam illum hic error cumque iste sint, esse voluptates unde? Illum facilis adipisci aliquid eius! Quasi?
+          </p>
         </div>
-        <div>
+        <div class="duvida">
           <h3>A clínica veterinária da PetLife possui serviços de emergência?</h3>
           <img src="./assets/Vector 2.svg" alt="">
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur voluptas, sint deserunt reprehenderit nesciunt voluptatum eum adipisci, tenetur omnis, veniam ab non! Consectetur enim, non consequatur quos autem perferendis mollitia!</p>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur voluptas, sint deserunt reprehenderit
+            nesciunt voluptatum eum adipisci, tenetur omnis, veniam ab non! Consectetur enim, non consequatur quos autem
+            perferendis mollitia!</p>
         </div>
-        <div>
+        <div class="duvida">
           <h3>A clínica oferece serviços de banho e tosa?</h3>
           <img src="./assets/Vector 2.svg" alt="">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur perferendis quisquam in quo maxime tenetur ipsum cumque consectetur, minus ea alias soluta voluptatum, veniam sapiente perspiciatis, tempore possimus quaerat atque!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur perferendis quisquam in quo maxime
+            tenetur ipsum cumque consectetur, minus ea alias soluta voluptatum, veniam sapiente perspiciatis, tempore
+            possimus quaerat atque!</p>
         </div>
       </div>
     </div>
   </section>
+  <footer>
+    <div class="container">
+      <div class="left">
+        <a href="index.html">PetLife</a>
+        <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!</p>
+      </div>
+      <div class="right">
+        <div class="list">
+          <p>Links rápidos</p>
+          <ul>
+            <li>
+              <a href="#inicio">Início</a>
+            </li>
+            <li>
+              <a href="#clinica">Clínica</a>
+            </li>
+            <li>
+              <a href="#farmacia">Farmácia</a>
+            </li>
+            <li>
+              <a href="#duvidas">Dúvidas</a>
+            </li>
+          </ul>
+        </div>
+        <div class="list">
+          <p>Encontre-nos</p>
+          <ul>
+            <li>
+              <a href="https://web.whatsapp.com/send?phone=22987654321">WhatsApp: (22) 98765-4321</a>
+            </li>
+            <li>
+              <a href="mailto:thiagorodriguezdev@hotmail.com" target="_blank">Email: contato@petlife.com.br</a>
+            </li>
+            <li>
+              <a href="https://maps.app.goo.gl/6fy49YKY9o4y8acg8">Endereço: Av. 7 de Setembro, nº 42, Centro</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="rodape">
+      <p>Desenvolvido por <a href="https://github.com/thiagorodriguezdev" target="_blank">Thiago Rodríguez</a> na trilha
+        Start na Programação 🤘 da OneBitCode.</p>
+    </div>
+  </footer>
+
 </body>
 
 </html>
