--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PetLife</title>
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/variables.css">
+  <link rel="stylesheet" href="css/typograph.css">
+  <link rel="stylesheet" href="css/grid.css">
 </head>
 
 <body>
@@ -34,6 +38,7 @@
           </li>
         </ul>
       </nav>
+      <img class="hamburger" src="assets/hamburger.svg" alt="">
     </div>
   </header>
   <section class="s-hero" id="inicio">
@@ -166,12 +171,16 @@
         </div>
       </div>
     </div>
-    <div class="rodape">
-      <p>Desenvolvido por <a href="https://github.com/thiagorodriguezdev" target="_blank">Thiago Rodríguez</a> na trilha
+  </footer>
+  <div class="rodape">
+    <div class="container">
+      <p>Desenvolvido por <a href="https://github.com/thiagorodriguezdev" target="_blank">Thiago Rodríguez</a> e criado
+        por <a href="https://www.linkedin.com/in/isaac-pontes/" target="_blank">Isaac Pontes</a> na trilha
         Start na Programação 🤘 da OneBitCode.</p>
     </div>
-  </footer>
+  </div>
 
+  <script src="script.js"></script>
 </body>
 
 </html>
